# jwt_auth

./: .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: checks.yaml  ci.yaml
src/: .coveragerc  alembic.ini  app.py  base_repository.py  config.py  db.db  deps.py  di.py  main.py  run.py
src/auth/: api.py  exceptions.py  responses.py  service.py  utils.py
src/core/: config.py
src/core/auth/: api.py  exceptions.py  responses.py  schemas.py  service.py  utils.py
src/core/db/: db.py  init_db.py
src/db/: models.py  session.py
src/migrations/: env.py
src/migrations/versions/: 2023_12_07_add_username_field.py  2023_12_07_create_user_table.py  2023_12_11_create_user_table.py
src/users/: api.py  dao.py  models.py  repository.py  schemas.py
tests/: .env_test  config.py  conftest.py
tests/e2e/auth/: test_api.py
tests/e2e/core/auth/: conftest.py  test_api.py  test_auth.py
tests/unit/core/auth/: test_utils.py
